--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <!-- HERO -->
 <section class="hero">
+    <img src="images/profile.jpg" alt="IMG-20240124-WA0027" class="profile-pic">
+
     <p class="small-title">Aspiring Software Developer</p>
     <h1>AGGUNNA KUMARSHI</h1>
     <a href="#projects" class="hero-btn">View Work →</a>
@@ -57,7 +59,7 @@
 
     <div class="projects-grid">
         <div class="project-card">
-            <img src="images/project1.jpg" alt="Project 1">
+            <img src="IMG-20240124-WA0027.jpg" alt="profile" class ="profile-pics">
             <h3>E-Commerce Application</h3>
             <p>Java, Spring Boot, MySQL based e-commerce web app.</p>
         </div>
@@ -73,8 +75,8 @@
 <!-- CONTACT -->
 <section id="contact">
     <h2>CONTACT</h2>
-    <p>Email: yourname@gmail.com</p>
-    <p>GitHub: github.com/yourusername</p>
+    <p>Email: kumarshiaggunna@gmail.com</p>
+    <p>GitHub: https://aggunnakumarshi.github.io/portfolio/</p>
     <p>LinkedIn: linkedin.com/in/yourprofile</p>
 
     <a href="resume.pdf" download class="resume-btn">Download Resume</a>
